--- a/tutorials/i_linear_response.ipynb
+++ b/tutorials/i_linear_response.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "468009c3",
+   "id": "e0f3f4f3",
    "metadata": {},
    "source": [
     "# Linear response\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f1ffc4",
+   "id": "e85a8e33",
    "metadata": {},
    "source": [
     "We will calculate the optical absorption in the random phase approximation (RPA) and compare it to time-domain simulations in the linear response regime, subject to a weak external field. Note, however, that the time-domain simulaton is not limited to the linear-response case, as demonstrated in [Cox et al.](https://www.nature.com/articles/ncomms6725)."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b66164",
+   "id": "deca0dfe",
    "metadata": {},
    "source": [
     "## RPA"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2b6019",
+   "id": "e17d7b08",
    "metadata": {},
    "source": [
     "First, we set up the RPA simulation. We will consider a triangular nanoflake"
@@ -35,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "21495235",
+   "id": "41917ec8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:29.352981Z",
-     "iopub.status.busy": "2025-02-03T14:15:29.352797Z",
-     "iopub.status.idle": "2025-02-03T14:15:32.979302Z",
-     "shell.execute_reply": "2025-02-03T14:15:32.978674Z"
+     "iopub.execute_input": "2025-02-03T14:23:50.033060Z",
+     "iopub.status.busy": "2025-02-03T14:23:50.032886Z",
+     "iopub.status.idle": "2025-02-03T14:23:53.578182Z",
+     "shell.execute_reply": "2025-02-03T14:23:53.577648Z"
     },
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c162cfad",
+   "id": "efb05194",
    "metadata": {},
    "source": [
     "We obtain the polarizability for a uniform external field according to "
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab80850d",
+   "id": "0d388b1c",
    "metadata": {},
    "source": [
-    "$$\\\\alpha_{ij}(\\omega) = x_j \\chi_0(\\omega)/ (1- C \\chi_0(\\omega)) x_i$$,"
+    "$$\\alpha_{ij}(\\omega) = x_j \\chi_0(\\omega)/ (1- C \\chi_0(\\omega)) x_i$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27556435",
+   "id": "2d65de5a",
    "metadata": {},
    "source": [
     "where $\\chi_0(\\omega)$ is the bare density-density correlator and $C$ is the Coulomb matrix, as in [Thongrattanasiri et al.](https://pubs.acs.org/doi/10.1021/nn204780e)"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7230b0f5",
+   "id": "f596c918",
    "metadata": {},
    "source": [
     "Here, we focus on an external x-polarized field"
@@ -106,13 +106,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "66de80c8",
+   "id": "650fcd7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:32.981741Z",
-     "iopub.status.busy": "2025-02-03T14:15:32.981318Z",
-     "iopub.status.idle": "2025-02-03T14:15:43.429605Z",
-     "shell.execute_reply": "2025-02-03T14:15:43.428960Z"
+     "iopub.execute_input": "2025-02-03T14:23:53.580495Z",
+     "iopub.status.busy": "2025-02-03T14:23:53.580180Z",
+     "iopub.status.idle": "2025-02-03T14:24:03.878775Z",
+     "shell.execute_reply": "2025-02-03T14:24:03.878069Z"
     }
    },
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad60375c",
+   "id": "0f6caea4",
    "metadata": {},
    "source": [
     "From the imaginary part of the polarizability, we obtain the absorption spectrum as follows"
@@ -135,13 +135,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "62f48c65",
+   "id": "4b4980f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:43.432596Z",
-     "iopub.status.busy": "2025-02-03T14:15:43.432360Z",
-     "iopub.status.idle": "2025-02-03T14:15:43.519313Z",
-     "shell.execute_reply": "2025-02-03T14:15:43.518811Z"
+     "iopub.execute_input": "2025-02-03T14:24:03.881676Z",
+     "iopub.status.busy": "2025-02-03T14:24:03.881476Z",
+     "iopub.status.idle": "2025-02-03T14:24:03.964867Z",
+     "shell.execute_reply": "2025-02-03T14:24:03.964363Z"
     }
    },
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0237906b",
+   "id": "11163df8",
    "metadata": {},
    "source": [
     "## Time-domain simulations"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4513d59a",
+   "id": "89c83ce1",
    "metadata": {},
    "source": [
     "For the time-domain simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
@@ -168,13 +168,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "685ec7f9",
+   "id": "8effc1a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:43.522308Z",
-     "iopub.status.busy": "2025-02-03T14:15:43.522094Z",
-     "iopub.status.idle": "2025-02-03T14:15:43.548090Z",
-     "shell.execute_reply": "2025-02-03T14:15:43.547452Z"
+     "iopub.execute_input": "2025-02-03T14:24:03.967735Z",
+     "iopub.status.busy": "2025-02-03T14:24:03.967517Z",
+     "iopub.status.idle": "2025-02-03T14:24:03.991635Z",
+     "shell.execute_reply": "2025-02-03T14:24:03.991077Z"
     }
    },
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b05589f0",
+   "id": "b07d0d3b",
    "metadata": {},
    "source": [
     "We then compute the time-dependent dipole moment and Fourier transform it."
@@ -196,13 +196,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "47ee7922",
+   "id": "0d82b0a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:43.550376Z",
-     "iopub.status.busy": "2025-02-03T14:15:43.550183Z",
-     "iopub.status.idle": "2025-02-03T14:15:45.358323Z",
-     "shell.execute_reply": "2025-02-03T14:15:45.357792Z"
+     "iopub.execute_input": "2025-02-03T14:24:03.993727Z",
+     "iopub.status.busy": "2025-02-03T14:24:03.993347Z",
+     "iopub.status.idle": "2025-02-03T14:24:05.779488Z",
+     "shell.execute_reply": "2025-02-03T14:24:05.778848Z"
     }
    },
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8bbb852",
+   "id": "65658940",
    "metadata": {},
    "source": [
     "The polarizability tensor is given by $\\alpha_{ij} = p_i / E_j$. Here, we investigate the xx-component."
@@ -242,13 +242,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f1ed3eb1",
+   "id": "88070261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:45.360366Z",
-     "iopub.status.busy": "2025-02-03T14:15:45.359995Z",
-     "iopub.status.idle": "2025-02-03T14:15:45.839716Z",
-     "shell.execute_reply": "2025-02-03T14:15:45.839091Z"
+     "iopub.execute_input": "2025-02-03T14:24:05.781516Z",
+     "iopub.status.busy": "2025-02-03T14:24:05.781137Z",
+     "iopub.status.idle": "2025-02-03T14:24:06.284194Z",
+     "shell.execute_reply": "2025-02-03T14:24:06.283616Z"
     }
    },
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a502dea",
+   "id": "21e04a55",
    "metadata": {},
    "source": [
     "We can now compare the two results."
@@ -271,13 +271,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b4bd6703",
+   "id": "61c0ff1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:15:45.842159Z",
-     "iopub.status.busy": "2025-02-03T14:15:45.841806Z",
-     "iopub.status.idle": "2025-02-03T14:15:46.284130Z",
-     "shell.execute_reply": "2025-02-03T14:15:46.283497Z"
+     "iopub.execute_input": "2025-02-03T14:24:06.286879Z",
+     "iopub.status.busy": "2025-02-03T14:24:06.286366Z",
+     "iopub.status.idle": "2025-02-03T14:24:06.729589Z",
+     "shell.execute_reply": "2025-02-03T14:24:06.728958Z"
     },
     "lines_to_next_cell": 0
    },
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9439ab",
+   "id": "9ddf691c",
    "metadata": {},
    "outputs": [],
    "source": []
