--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e8312e7",
+   "id": "a4e9ca3c",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9442660f",
+   "id": "f052e629",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca6081b",
+   "id": "5c1b20f6",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d6ad98",
+   "id": "ae0f4db9",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61864e3f",
+   "id": "e13b2166",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aabca3f7",
+   "id": "92e79c6a",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "197221f5",
+   "id": "5ffbc045",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:45.368635Z",
-     "iopub.status.busy": "2025-02-03T14:14:45.368460Z",
-     "iopub.status.idle": "2025-02-03T14:14:48.545644Z",
-     "shell.execute_reply": "2025-02-03T14:14:48.545048Z"
+     "iopub.execute_input": "2025-02-03T14:23:05.445192Z",
+     "iopub.status.busy": "2025-02-03T14:23:05.444755Z",
+     "iopub.status.idle": "2025-02-03T14:23:08.432177Z",
+     "shell.execute_reply": "2025-02-03T14:23:08.431642Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed3f819",
+   "id": "5ac75c75",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a4007a",
+   "id": "e83ff2eb",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0673a9",
+   "id": "4a6929df",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d117ef1",
+   "id": "f7d0f21f",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c03e621",
+   "id": "e92068b5",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfbd41b4",
+   "id": "fa2d2dd2",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efde1729",
+   "id": "0bffa3fb",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4866c3cd",
+   "id": "42c3f2b9",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b353d3e6",
+   "id": "85dfa2db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:48.548040Z",
-     "iopub.status.busy": "2025-02-03T14:14:48.547586Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.656520Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.655926Z"
+     "iopub.execute_input": "2025-02-03T14:23:08.434510Z",
+     "iopub.status.busy": "2025-02-03T14:23:08.434056Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.305326Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.304724Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dec4c5a",
+   "id": "79c5da96",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eedfece6",
+   "id": "94ba8ef3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.658531Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.658104Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.661645Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.661025Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.307140Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.306951Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.310357Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.309825Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "984f36ce",
+   "id": "a9dc7649",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a6967c",
+   "id": "bea1d725",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04310ea",
+   "id": "3b92b870",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e02e706c",
+   "id": "77a2190f",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c23fa82",
+   "id": "21d3ebac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.663533Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.663217Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.708348Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.707778Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.312147Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.311831Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.354553Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.353992Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4421939",
+   "id": "6e2d2948",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56e686df",
+   "id": "f7a93b6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.710250Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.709903Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.780384Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.779889Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.356512Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.356174Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.420198Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.419689Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba49962",
+   "id": "f401eb84",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4205a23",
+   "id": "1b07584a",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb79802a",
+   "id": "3c4fba7c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.782148Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.781978Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.810469Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.809927Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.421978Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.421805Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.447279Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.446731Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "547b7517",
+   "id": "bb668e0a",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4de9853",
+   "id": "4cb2eb7d",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e00b70",
+   "id": "48c41821",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af75768",
+   "id": "94b1567c",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2464b22d",
+   "id": "0fd21d77",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e8daf97a",
+   "id": "c3c4ef20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.812403Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.812216Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.816431Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.815942Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.449371Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.449027Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.452888Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.452370Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "051587d5",
+   "id": "c0090da2",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6df327f6",
+   "id": "8dc2d7d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.818462Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.818010Z",
-     "iopub.status.idle": "2025-02-03T14:14:50.821022Z",
-     "shell.execute_reply": "2025-02-03T14:14:50.820451Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.454644Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.454322Z",
+     "iopub.status.idle": "2025-02-03T14:23:10.457337Z",
+     "shell.execute_reply": "2025-02-03T14:23:10.456732Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80171877",
+   "id": "accef416",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dd5994bc",
+   "id": "e2da6ea8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:50.823033Z",
-     "iopub.status.busy": "2025-02-03T14:14:50.822706Z",
-     "iopub.status.idle": "2025-02-03T14:14:53.420244Z",
-     "shell.execute_reply": "2025-02-03T14:14:53.419615Z"
+     "iopub.execute_input": "2025-02-03T14:23:10.459063Z",
+     "iopub.status.busy": "2025-02-03T14:23:10.458747Z",
+     "iopub.status.idle": "2025-02-03T14:23:12.997092Z",
+     "shell.execute_reply": "2025-02-03T14:23:12.996498Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d828e95",
+   "id": "c4423911",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9bb769",
+   "id": "8474c7c9",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a054f4f0",
+   "id": "974d042d",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a25e53",
+   "id": "ca5c1f55",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "363acc11",
+   "id": "e24ee29c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:53.422527Z",
-     "iopub.status.busy": "2025-02-03T14:14:53.422100Z",
-     "iopub.status.idle": "2025-02-03T14:14:53.425713Z",
-     "shell.execute_reply": "2025-02-03T14:14:53.425243Z"
+     "iopub.execute_input": "2025-02-03T14:23:12.999193Z",
+     "iopub.status.busy": "2025-02-03T14:23:12.998846Z",
+     "iopub.status.idle": "2025-02-03T14:23:13.002515Z",
+     "shell.execute_reply": "2025-02-03T14:23:13.002041Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7feddc02be20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f9918563e20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "631b19e3",
+   "id": "dbfe7f7b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c75d0f5",
+   "id": "af35c243",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d61798c",
+   "id": "12a4dca4",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7697622e",
+   "id": "6ca68144",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8086631e",
+   "id": "c7bb1cda",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:53.427536Z",
-     "iopub.status.busy": "2025-02-03T14:14:53.427355Z",
-     "iopub.status.idle": "2025-02-03T14:14:53.430436Z",
-     "shell.execute_reply": "2025-02-03T14:14:53.429880Z"
+     "iopub.execute_input": "2025-02-03T14:23:13.004514Z",
+     "iopub.status.busy": "2025-02-03T14:23:13.004158Z",
+     "iopub.status.idle": "2025-02-03T14:23:13.007190Z",
+     "shell.execute_reply": "2025-02-03T14:23:13.006743Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "389aaf33",
+   "id": "db2582a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:14:53.432203Z",
-     "iopub.status.busy": "2025-02-03T14:14:53.431865Z",
-     "iopub.status.idle": "2025-02-03T14:14:54.498590Z",
-     "shell.execute_reply": "2025-02-03T14:14:54.498078Z"
+     "iopub.execute_input": "2025-02-03T14:23:13.008816Z",
+     "iopub.status.busy": "2025-02-03T14:23:13.008529Z",
+     "iopub.status.idle": "2025-02-03T14:23:14.069906Z",
+     "shell.execute_reply": "2025-02-03T14:23:14.069358Z"
     }
    },
    "outputs": [
